# fetch-github-tag

./: .gitignore  README.md  action.yml  fetch-tags.py  pyproject.toml
.github/workflow/: use-action.yml
.github/workflows/: bump-and-tag.yml  merge-to-develop.yml  next-release.yml  use-action.yml
latest_tag/: cli.py
