[project]
name = "py-github"
version = "1.0.0"
description = "Tag fetcher for github"
authors = [
    { name = "Munywele Sammy Barasa", email = "sammy@munywele.co.ke" }
]
readme = "README.md"

requires-python = ">=3.12"
dependencies = [
    "python-dotenv (>=1.1.1,<2.0.0)",
    "loguru; python_version >= '3.5' and python_version < '4.0'",
    "requests (>=2.32.4,<3.0.0)",
    "pygithub (>=2.6.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
